# SSA_Mai

./: CMakeLists.txt  README.md  test.cpp
hl_mai_06_cache/: CMakeLists.txt  readme.md  start.sh
hl_mai_06_cache/database/: author.cpp  cache.cpp  cache.h  person.cpp  person.h
hl_mai_06_cache/docker/: docker-compose.yml
hl_mai_06_cache/web_server/: http_request_factory.h
hl_mai_06_cache/web_server/handlers/: person_handler.h
hl_mai_08_sharding/: CMakeLists.txt  test.cpp
hl_mai_08_sharding/database/: author.cpp  database.h  person.cpp  person.h
hl_mai_08_sharding/docker/: docker-compose.yml
hl_mai_08_sharding/docker/mysql/: Dockerfile
hl_mai_08_sharding/docker/proxysql/: Dockerfile
hl_mai_08_sharding/web_server/: http_request_factory.h  http_web_server.h
hl_mai_08_sharding/web_server/handlers/: person_handler.h
hl_mai_lab_01/: CMakeLists.txt  test.cpp
hl_mai_lab_01/database/: Car.cpp  author.cpp  car.h  person.cpp  person.h
hl_mai_lab_01/web_server/: http_request_factory.h  http_web_server.h
hl_mai_lab_01/web_server/handlers/: author_handler.h  person_handler.h
hl_mai_lab_02/: CMakeLists.txt  readme.md  start.sh  test.cpp
hl_mai_lab_02/database/: database.cpp  message.cpp  person.cpp  person.h
hl_mai_lab_02/docker/: README.md
hl_mai_lab_02/web_server/handlers/: author_handler.h
hl_mai_lab_03/: CMakeLists.txt  readme.md  start.sh
hl_mai_lab_03/database/: author.cpp  cache.cpp  cache.h  database.cpp  person.h
hl_mai_lab_03/web_server/: http_web_server.h
hl_mai_lab_03/web_server/handlers/: author_handler.h  person_handler.h
hl_mai_lab_04/: CMakeLists.txt  readme.md  start.sh  start_writer.sh  writer_main.cpp
hl_mai_lab_04/database/: author.cpp  database.cpp  person.cpp  person.h
hl_mai_lab_04/docker/: docker-compose.yml
hl_mai_lab_04/web_server/: http_request_factory.h
hl_mai_lab_04/web_server/handlers/: author_handler.h  person_handler.h
lab_00/: config.cpp  config.h  main.cpp
lab_01/: CMakeLists.txt  WebServer.cpp  config.cpp  main.cpp  mySQL.sql  rootcert.pem  test.cpp
lab_01/content/: index.html
